--- a/quickstart-master/src/app/features/sort-block/sort-block.component.html
+++ b/quickstart-master/src/app/features/sort-block/sort-block.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper-sort-block">
     <div class="title-sort-block"> {{ name }} </div>
-    <sort-button [name] = "'by likes'"></sort-button>
-    <sort-button [name] = "'by raiting'"></sort-button>
+    <sort-button [name] = "'by likes'" (click) = "sortByLikes()"></sort-button>
+    <sort-button [name] = "'by raiting'" (click) = "sortByRaiting()"></sort-button>
     <search-button></search-button>
 </div>
 
