--- a/quickstart-master/src/app/features/search-button/search-button.component.html
+++ b/quickstart-master/src/app/features/search-button/search-button.component.html
@@ -1,4 +1,4 @@
 <form class="form-wrapper">
-	<input type="text" placeholder="Search by name" required>
-	<button type="submit"></button>
+	<input placeholder="Search by name" type="text" #textbox (keyup.enter)="onKeyUp(textbox.value)" />
+	<button (click)="onKeyUp(textbox.value)"></button>
 </form>
